# This file is part of the Hercules-Helper project.
#
# (C) Copyright William R. Lewis, 2020-2024

# Changelog:
#
# Updated: 13 APR 2024
# - Don't try to add LD_LIBRARY_PATH if it's not present
#
# Updated: 11 APR 2024
# - on macOS, tack LD_LIBRARY_PATH onto DYLD_LIBRARY_PATH
#   This is because macOS for security reasons doesn't pass
#   the shell's DYLD_LIBRARY_PATH into the next level shell.
#
# Updated: 02 APR 2024
# - Fix macOS version detection issue that crept in a while back
# - Make the various build helpers more uniform (part 1)
# - No longer default to Aethra.  --flavor= must be specified.
#   There was too much confusion having a default flavor.
# - Don't display message for Bash versions < 4.
#
# Updated: 10 MAR 2024
# - Add support for Sparky Linux
#
# Updated: 04 MAR 2024
# - Remove the long-running process looking for various compiler files
#
# Updated: 02 MAR 2024
# - Allow either '--flavor=sdl-hyperion' or '--flavor=sdl-hercules'
# - Improve wording of "source" message and end of processing
# - Make that message display in color
#
# Updated: 22 JAN 2024
# - Improvements to Alpine support
#
# Updated: 21 JAN 2024
# - Apline now supported, for Hercules-Aethra (not fully tested)
#
# Updated: 12 JAN 2024
# - fix type in README
# - add support for Devuan Linux
#
# Updated: 29 DEC 2023
# - correct Regina REXX build on Pine64
#
# Updated: 06 DEC 2023
# - fix path in dpkg postinst script
#
# Updated: 04 DEC 2023
# - initial work on Hercules-Aethra Debian packager
#
# Updated: 03 DEC 2023
# - switch defaults from SDL-Hercules-390 to Hercules-Aethra
#
# Updated: 23 NOV 2023
# - add --prefix command line switch to set install dir for configure
#   this is a shortcut to avoid using a local config file
# - display number of CPUs before running 'make check'
# - set MACOSX_DEPLOYMENT_TARGET= for macOS Xcode-tools / Clang
#
# Updated: 17 NOV 2023
# - add regina-links.txt with URLs to the Gists
# - make the --enable-custom configure option configurable